Git Ignore Update

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,34 @@ ehthumbs.db
 [Dd]esktop.ini
 Corridor/Library/ShaderCache/
 Corridor/Library/metadata/
+*.log
+*.log
+Temp/UnityTempFile-3f8ee3efc22553d4b91b18459d7495f2
+Temp/UnityTempFile-4372be7eed330a6409f236903d016737
+*.log
+Temp/__Backupscenes/0.backup
+Temp/FBXMaxExport.ms
+Temp/MaxExportedFBXFile.fbx
+Temp/ProcessJobs/e9a6970f79cd12d8b075e7d72f1b07cb.bakert
+Temp/UnityLockfile
+Temp/UnityTempFile-0320deb593970664eb522723bddc4fac
+Temp/UnityTempFile-30bc316e7b59a5149a72341606c8cc58
+Temp/UnityTempFile-3f8ee3efc22553d4b91b18459d7495f2
+Temp/UnityTempFile-4372be7eed330a6409f236903d016737
+Temp/UnityTempFile-f94edd5ea730b744c9d36c39e6e862cb
+Temp/UnityTempFile-e616a3ea536d9664d8da7c5778e5ef2a
+Temp/UnityTempFile-e5e7cba6523997b4fb7f040360debd9a
+Temp/UnityTempFile-e4a2b1d4f7d0a0e478265ba038279cbc
+Temp/UnityTempFile-d52c8ceacaf3d09439df86ba498ae1bb
+Temp/UnityTempFile-bb67732ca545f414aa5d142c2bf38242
+Temp/UnityTempFile-96890dedda027fb48a4db8dd8b088108
+Temp/UnityTempFile-9572ef0bfbc256340aa398c3948a9026
+Temp/UnityTempFile-8cf96848bc26bfc4ba2d5f7bf438d047
+Temp/UnityTempFile-7f61312b5ec72d244b51c7bd118ac3ee
+Temp/UnityTempFile-7f4a90bd82565dd4ea7d656b5f466ce0
+Temp/UnityTempFile-7c376c869d4018547ab58f2d315d19d7
+Temp/UnityTempFile-73ea41e0cfc377b40949e1638eda0716
+Temp/UnityTempFile-68cdf0551b4280b418105e63c707480d
+Temp/UnityTempFile-531b10e77508a864585b9190e51ac1b0
+Temp/UnityTempFile-515f3bbb5da340d4e82d5fe21c4ba351
+Temp/UnityTempFile-4372be7eed330a6409f236903d016737
