Git Ignore Update

--- a/.gitignore
+++ b/.gitignore
@@ -74,3 +74,4 @@ Temp/UnityTempFile-68cdf0551b4280b418105e63c707480d
 Temp/UnityTempFile-531b10e77508a864585b9190e51ac1b0
 Temp/UnityTempFile-515f3bbb5da340d4e82d5fe21c4ba351
 Temp/UnityTempFile-4372be7eed330a6409f236903d016737
+Temp/UnityLockfile
