--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -107,18 +107,17 @@
      <Compile Include="Assets\Scripts\ArribaAbajo.cs" />
      <Compile Include="Assets\Scripts\Botones.cs" />
      <Compile Include="Assets\Scripts\BotonesNav.cs" />
-     <Compile Include="Assets\Scripts\BotonesSeba.cs" />
      <Compile Include="Assets\Scripts\Camara.cs" />
      <Compile Include="Assets\Scripts\ColorAUto.cs" />
      <Compile Include="Assets\Scripts\Desconectado.cs" />
      <Compile Include="Assets\Scripts\Disconnect.cs" />
+     <Compile Include="Assets\Scripts\EarthMotion\BotonesEarthMotion.cs" />
+     <Compile Include="Assets\Scripts\EarthMotion\MovimientoMundo.cs" />
      <Compile Include="Assets\Scripts\FullScreen.cs" />
-     <Compile Include="Assets\Scripts\Interaccion.cs" />
      <Compile Include="Assets\Scripts\Jugador.cs" />
      <Compile Include="Assets\Scripts\Mapa.cs" />
      <Compile Include="Assets\Scripts\MenuPrincipal.cs" />
      <Compile Include="Assets\Scripts\MenuRolling.cs" />
-     <Compile Include="Assets\Scripts\MovimientoMundo.cs" />
      <Compile Include="Assets\Scripts\NivelesJuego.cs" />
      <Compile Include="Assets\Scripts\Pausa.cs" />
      <Compile Include="Assets\Scripts\PickUp.cs" />
@@ -129,6 +128,8 @@
      <Compile Include="Assets\Scripts\Seleccionado.cs" />
      <Compile Include="Assets\Scripts\SelectNav.cs" />
      <Compile Include="Assets\Scripts\UI.cs" />
+     <Compile Include="Assets\Scripts\VisualMotion\BotonesSeba.cs" />
+     <Compile Include="Assets\Scripts\VisualMotion\Interaccion.cs" />
      <Compile Include="Assets\Scripts\Zoom.cs" />
      <Compile Include="Assets\WPMapGlobeEditionLite\Demo\ColorHSV.cs" />
      <Compile Include="Assets\WPMapGlobeEditionLite\Demo\ColorPicker.cs" />
